nuevos link con target diferentes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://www.google.com.ar" target="_blank" style="display: block; margin-bottom: 1em;">Open new tab</a>
+    <a href="https://www.google.com.ar" target="_blank" style="display: block; margin-bottom: 1em;">_blank</a>
+    <a href="https://www.google.com.ar" target="_self" style="display: block; margin-bottom: 1em;">_self</a>
+    <a href="https://www.google.com.ar" target="_parent" style="display: block; margin-bottom: 1em;">_parent</a>
+    <a href="https://www.google.com.ar" target="_top" style="display: block; margin-bottom: 1em;">_top</a>
     <a href="tel:+11223344" style="display: block; margin-bottom: 1em;">Teléfono</a>
     <a href="whatsapp://send/?phone=5491144398558&text=Seguridad&app_absent=0" style="display: block; margin-bottom: 1em;">Whatsapp 1</a>
     <a href="https://wa.me/1122334455" style="display: block; margin-bottom: 1em;">Whatsapp 1</a>
